<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Search</string>
    <string name="media">Media Library</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="share_app">Share App</string>
    <string name="share">Share</string>
    <string name="write_to_support">Contact Support</string>
    <string name="user_agreement">User Agreement</string>
    <string name="share_info_message">Share via</string>
    <string name="share_message">https://practicum.yandex.com/android-developer/</string>
    <string name="email">test@yandex.com</string>
    <string name="email_subject">Message to the developers of Playlist Maker</string>
    <string name="email_body">Thank you to the developers for creating an awesome app!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="network_problem">Connection problems\n\nLoading failed. Check your internet connection</string>
    <string name="nothing_found">Nothing found</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="clear_history">Clear History</string>
    <string name="your_history">You searched for</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="favorite_tracks">Favorite Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="create_playlist">New Playlist</string>
    <string name="your_media_is_empty">Your media library is empty</string>
    <string name="you_not_created_playlist">You haven\'t created any playlists</string>
    <string name="new_playlist">New Playlist</string>
    <string name="playlist_name">Name*</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="dialog_finish_playlist_title">Finish creating playlist?</string>
    <string name="dialog_finish_playlist_message">All unsaved data will be lost</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_finish">Finish</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="added_to_playlist">Added to playlist %1$s</string>
    <string name="track_already_added_to_playlist">Track is already added to playlist %1$s</string>
    <string name="playlist_created">Playlist %1$s created</string>
    <string name="edit_info">Edit Information</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="playlist_no_shareable_tracks">There are no tracks in this playlist to share</string>
    <string name="delete_track_title">Do you want to delete this track?</string>
    <string name="delete_playlist_title">Do you want to delete this playlist «%1$s»?</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>

    <plurals name="tracks_count">
        <item quantity="one">%d track</item>
        <item quantity="few">%d tracks</item>
        <item quantity="many">%d tracks</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d minute</item>
        <item quantity="few">%d minutes</item>
        <item quantity="many">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>
</resources>