<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/TitleTextStyle"/>

    <Button
        style="@style/MainScreenButton"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/button_search"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        style="@style/MainScreenButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/button_media"
        android:text="@string/media"
        app:icon="@drawable/ic_media" />

    <Button
        style="@style/MainScreenButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:id="@+id/button_setting"
        android:text="@string/settings"
        app:icon="@drawable/ic_setting" />
</LinearLayout>

