<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/BottomNavigationScreenLinearLayout">

            <ImageView
                style="@style/BottomNavigationScreenImageView"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search" />

            <TextView
                style="@style/BottomNavigationScreenTextView"
                android:text="@string/search"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout style="@style/BottomNavigationScreenLinearLayout">

            <ImageView
                style="@style/BottomNavigationScreenImageView"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_media" />

            <TextView
                style="@style/BottomNavigationScreenTextView"
                android:text="@string/media"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout style="@style/BottomNavigationScreenLinearLayout">

            <ImageView
                style="@style/BottomNavigationScreenImageView"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_setting" />

            <TextView
                style="@style/BottomNavigationScreenTextView"
                android:text="@string/settings"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>