<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_media_screen"
    android:fitsSystemWindows="true"
    tools:context="com.arestov.playlistmaker.ui.media.MediaFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_create_playlist_screen"
        style="@style/StyleToolBarBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/create_playlist" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/create_playlist_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_create_playlist_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/pickerImage"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/rounded_rectangle_for_image"
                android:src="@drawable/ic_add_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name_playlist"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/playlist_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_playlist_input"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:maxLength="25" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_description_playlist"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/description"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_playlist_input"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:maxLength="30"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_playlist_button"
        style="@style/CreatePlaylistButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>