<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_search_screen"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.arestov.playlistmaker.ui.search.SearchFragment"
    >

    <!-- Header Toolbar  -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_search_screen"
        style="@style/StyleToolBarBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        />

    <!--  Search field FrameLayout -->
    <FrameLayout
        android:id="@+id/search_container_search_screen"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/search_radius"
        android:orientation="horizontal"
        >

        <!-- Search icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:paddingStart="14dp"
            android:src="@drawable/ic_search_input"
            />

        <!-- Search input  -->
        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:saveEnabled="false"
            android:singleLine="true"
            android:textColor="@color/text_color_edit_search_screen"
            android:textColorHint="@color/color_edit_search_screen"
            android:textCursorDrawable="@color/yp_black"
            android:textSize="16sp"
            />

        <!--  Clean button      -->
        <ImageView
            android:id="@+id/button_clear_input_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:paddingEnd="14dp"
            android:src="@drawable/ic_clear_input"
            android:visibility="gone"
            />
    </FrameLayout>

    <!-- ProgressBar  -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone"
        />

    <!-- Tracks RecyclerView    -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="24dp"
        android:visibility="gone"
        />

    <!--  Info container  -->
    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <!-- Info image  -->
        <ImageView
            android:id="@+id/info_container_image"
            style="@style/Container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="110dp"
            />
        <!--  Info message  -->
        <TextView
            android:id="@+id/info_container_text"
            style="@style/Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp"
            android:textAlignment="center"
            />

        <!-- Button retry request   -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/info_container_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/update"
            />
    </LinearLayout>

    <!-- History container  -->
    <LinearLayout
        android:id="@+id/history_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!--  History message  -->
        <TextView
            android:id="@+id/history_text"
            style="@style/Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="44dp"
            android:text="@string/your_history"
            android:textAlignment="center"
            />

        <!-- History tracks RecyclerView    -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="24dp"
            />


        <!-- Button clear history   -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear_history"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_history"
            />
    </LinearLayout>
</LinearLayout>
