<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_player_screen"
    android:fitsSystemWindows="true"
    tools:context="com.arestov.playlistmaker.ui.player.PlayerFragment">

    <!-- Header Toolbar  -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/StyleToolBarBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <!-- Content ScrollView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <!-- Album Image  -->
            <ImageView
                android:id="@+id/image_album"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="26dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Track name  -->
            <TextView
                android:id="@+id/track_name"
                style="@style/TrackName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_album" />

            <!-- Artist name  -->
            <TextView
                android:id="@+id/artist_name"
                style="@style/ArtistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/track_name" />

            <!-- Play/Pause Button -->
            <com.arestov.playlistmaker.ui.player.PlaybackButtonView
                android:id="@+id/button_play"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                app:playImage="@drawable/ic_button_play"
                app:pauseImage="@drawable/ic_button_pause"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artist_name" />

            <!-- Button add to playlist  -->
            <ImageView
                android:id="@+id/button_add_to_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:src="@drawable/ic_button_add_to_playlist"
                app:layout_constraintBottom_toBottomOf="@+id/button_play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_play" />

            <!-- Button add to favorite  -->
            <ImageView
                android:id="@+id/button_add_to_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_button_add_to_favorite"
                app:layout_constraintBottom_toBottomOf="@+id/button_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_play" />

            <!-- Track timer -->
            <TextView
                android:id="@+id/text_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/button_play"
                app:layout_constraintStart_toStartOf="@+id/button_play"
                app:layout_constraintTop_toBottomOf="@+id/button_play" />

            <!-- Duration -->
            <TextView
                android:id="@+id/label_duration"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="17dp"
                android:text="@string/duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_timer" />

            <TextView
                android:id="@+id/value_duration"
                style="@style/TextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_duration"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Album -->
            <TextView
                android:id="@+id/label_album"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="@id/label_duration"
                app:layout_constraintTop_toBottomOf="@id/label_duration" />

            <TextView
                android:id="@+id/value_album"
                style="@style/TextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_album"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="label_album,value_album" />

            <!-- Year -->
            <TextView
                android:id="@+id/label_year"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="@id/label_duration"
                app:layout_constraintTop_toBottomOf="@id/label_album" />

            <TextView
                android:id="@+id/value_year"
                style="@style/TextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_year"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="label_year,value_year" />

            <!-- Genre -->
            <TextView
                android:id="@+id/label_genre"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@id/label_duration"
                app:layout_constraintTop_toBottomOf="@id/label_year" />

            <TextView
                android:id="@+id/value_genre"
                style="@style/TextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_genre"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Country -->
            <TextView
                android:id="@+id/label_country"
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="@id/label_duration"
                app:layout_constraintTop_toBottomOf="@id/label_genre" />

            <TextView
                android:id="@+id/value_country"
                style="@style/TextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBaseline_toBaselineOf="@id/label_country"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_bottom_sheet_handle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:paddingBottom="18dp"
            android:text="@string/add_to_playlist"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_playlist_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_playlist"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="24dp"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>